# neural-temporal-learning

./: .gitignore  idea_difference.md  implementation_plan_v2.md  progress_report.md  pyproject.toml
configs/: default.yaml
configs/experiment/: electricity.yaml  synthetic_regime.yaml  synthetic_rotate.yaml
scripts/: run_baselines.py  run_phase2.py
src/data/: synthetic.py  temporal_loader.py
src/memory/: buffer.py
src/models/: fast_corrector.py  slow_prior.py
src/utils/: metrics.py
tests/: test_fast_corrector.py  test_slow_prior.py  test_synthetic_data.py
