[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neural_1"
version = "0.1.0"
description = "Multi-timescale temporal learning system for tabular data"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "tabpfn>=2.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "openml",
    "matplotlib",
    "seaborn",
    "pyyaml",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
